sass/_base.scss
body,
html {
	height: 100%;
	background: $background-color;
	font: 400 16px $font-stack-content;
	color: $text-color-base;
}

body {
	padding-top: 72px;
    @media screen and (max-width: 768px) {
        padding-top: 0;
    }
    &.has-cover {
	   padding-top: 0;
    }
}

h1,
h2,
h3,
h4 {
	margin: 30px 0;
	font: 700 34px $font-stack-heading;
	line-height: 56px;
	color: $text-color-heading;
}
h2 {
	margin-bottom: 20px;
	font-size: 26px;
}
h3,
h4 {
	margin: 20px 0 10px;
	font: 600 22px $font-stack-content;
}
h4 {
	font-size: 20px;
}

hr {
	background: none;
	position: relative;
	&:after {
		position: absolute;
		content: '';
		background: #d8d6de;
		height: 3px;
		width: 70%;
		margin: auto;
		left: 0;
		right: 0;
	}
}

p {
	margin: 30px 0;
	line-height: 38px;
	color: $text-color-content;
	word-wrap: break-word;
    img {
        margin: 30px 0;
		&.alignleft,
		&.alignright {
			margin: 10px 0 0;
			max-width: 50%;
		}
    }
}

blockquote,
cite,
q {
	margin: 30px 0;
	border-left: 3px solid #c6d5e1;
	padding: 5px 0 5px 30px;
	line-height: 38px;
	color: $text-color-quote;
	font: 400 22px $font-stack-quote;
    cite,
    p {
        margin:0;
        padding:0;
        border: none;
        color: $text-color-quote;
        font-style: italic;
    }
    cite {
        color: $text-color-cite;
    }
    i,
    em {
        font-style: normal;
    }
}

blockquote.pullquote {
	font-size: 36px;
	margin: 48px 0;
	padding: 0;
	text-align: center;
	border: none;
    @media screen and (max-width: 1000px) {
		margin-left: 0;
		margin-right: 0;
	}
}

blockquote.large {
	font-size: 200%;
	border-color: transparent;
	position: relative;
	padding: 0;
	margin: 30px 0;
    @media screen and (max-width: 1000px) {
        margin-left: 50px;
    }
    &:before {
        position: absolute;
        top: -10px;
        left: -50px;
        content: '“';
        font-size: 250%;
        opacity: 0.3;
    }
}

a {
    color: $link-color;
	font-weight: 600;
	text-decoration: none;
	border-bottom: 3px solid transparent;
    @include transition(all .2s ease-in-out);
    &:hover {
        text-decoration: none;
        color: $link-color-hover;
        p & {
            border-color: $link-border-color;
        }
    }
    &.block {
        display: block;
        color: #686868;
        font-weight: 600;
        text-align: center;
        border: 2px solid #c3c2c9;
        @include border-radius(4px);
        &:hover {
            border: 2px solid #0066d9;
            background: #0066d9;
            color: #fff;
        }
    }
}

code {
	padding: 2px 6px;
	margin: 0 5px;
	background: #f3f3f3;
	border: 1px solid #e6e6e6;
    font: 500 15px $font-stack-code;
	@include border-radius(4px);
}

pre {
	background: #313339;
	border: 0;
	color: #fff;
	margin: 40px 0;
	font: 500 15px $font-stack-code;
	line-height: 28px;
	padding: 25px 35px;
	overflow-x: auto;
	&.prettyprint {
        line-height: 36px;
        .entry-content & {
            border: 0;
            padding: 25px 35px;
        }
    }
    code {
        display: inline-block;
        padding: 0;
        margin: 0;
        color: #eee;
        font: 500 15px $font-stack-code;
        line-height: 28px;
        background: 0 0;
        border: 0;
    }
    
}

code .kwd, 
pre .kwd {
    color: #66d9ef;
}

code .pln, 
code .pun, 
pre .pln, 
pre .pun {
    color: #fff;
}

code .str, 
pre .str {
    color: #d64032;
}

code .lit, 
pre .lit {
    color: #ae81ff;
}

input.search-field {
	cursor: auto;
}

ul.inline {
	margin: 0;
    li {
        display: inline-block;
        margin-right: 10px;
        &:after {
            display: inline-block;
            content: '\2022';
            color: #ccc;
            padding-left: 10px;
        }
        &:last-child:after {
            display: none;
        }
    }
}

img {
    &.avatar {
        @include border-radius(50%);
        @for $i from 20 through 96 {
            &-#{$i} {
                width: #{$i}px;
                height: #{$i}px;
                display: inline-block;
                vertical-align: middle;
            }
        }
    }
}

